Make sure render type order of item quads is maintained